# apipro

./: db.sqlite3  pyproject.toml
api/: backends.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
apipro/: settings.py  urls.py
